add session checkout to payment

--- a/views/success.pug
+++ b/views/success.pug
@@ -15,7 +15,7 @@ html(lang="en")
                     div(style='width: 243px; height: 100px; position: relative; display: flex; align-items: center; flex-direction: column')
                         span(style='z-index: 1; color: white; font-size: 20px') SME
                         span(style='z-index: 1; font-size: 46px; color: white; margin-top: 15px') 250$
-                    svg(width='243' height='493' viewbox='0 0 243 493' fill='none' xmlns='http://www.w3.org/2000/svg' style='background: #c50000b0; position: absolute; top: 0; left: 0')
+                    svg(width='243' height='493' viewbox='0 0 243 493' fill='none' xmlns='http://www.w3.org/2000/svg' style='background: #003F71; position: absolute; top: 0; left: 0')
                         mask#mask0(mask-type='alpha' maskunits='userSpaceOnUse' x='0' y='0' width='243' height='493')
                             rect(width='243' height='493' rx='8' transform='matrix(1 0 0 -1 0 493)' fill='#003F71')
                         g(mask='url(#mask0)')
@@ -70,4 +70,4 @@ html(lang="en")
                                     span(style='font-size: 14px')
                                         | Your payment information has been sent to your email. Also, you can view all your transactions in the Order Invoice page
                             div(style='margin-top: 52px')
-                                button(style='width: 125px; height: 48px; background: #c50000b0; color: white; border-radius: 5px; border: none') OK
+                                button(style='width: 125px; height: 48px; background: #006EC5; color: white; border-radius: 5px; border: none') OK
