--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,172 +1,160 @@
-/* Variables */
+html {
+  overflow: hidden;
+}
+
+body {
+  background-color: #F1F9FF;
+  height: 100vh;
+  display: grid;
+  font-family: 'Ubuntu', sans-serif;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+}
+
 * {
   box-sizing: border-box;
 }
 
-body {
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  font-size: 16px;
-  -webkit-font-smoothing: antialiased;
+.main {
+  width: 920px;
+  height: 620px;
+  margin-top: 150px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #fff;
   display: flex;
-  justify-content: center;
-  align-content: center;
-  height: 100vh;
-  width: 100vw;
+  border-radius: 8px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.25);
 }
 
-form {
-  width: 30vw;
-  min-width: 500px;
-  align-self: center;
-  box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
-    0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
-  border-radius: 7px;
-  padding: 40px;
+.img img {
+  width: 240px;
+  height: 100%;
+  border-radius: 8px 0 0 8px;
 }
 
-input {
-  border-radius: 6px;
-  margin-bottom: 6px;
-  padding: 12px;
-  border: 1px solid rgba(50, 50, 93, 0.1);
-  height: 44px;
-  font-size: 16px;
-  width: 100%;
-  background: white;
+.content {
+  padding: 48px;
+  flex: 1;
 }
 
-.result-message {
-  line-height: 22px;
-  font-size: 16px;
-}
-
-.result-message a {
-  color: rgb(89, 111, 214);
+.content__title {
   font-weight: 600;
-  text-decoration: none;
+  font-size: 20px;
 }
 
-.hidden {
-  display: none;
-}
-
-#card-error {
-  color: rgb(105, 115, 134);
-  text-align: left;
-  font-size: 13px;
-  line-height: 17px;
-  margin-top: 12px;
-}
-
-#card-element {
-  border-radius: 4px 4px 0 0 ;
-  padding: 12px;
-  border: 1px solid rgba(50, 50, 93, 0.1);
-  height: 44px;
-  width: 100%;
-  background: white;
-}
-
-#payment-request-button {
-  margin-bottom: 32px;
-}
-
-/* Buttons and links */
-button {
-  background: #5469d4;
-  color: #ffffff;
-  font-family: Arial, sans-serif;
-  border-radius: 0 0 4px 4px;
-  border: 0;
-  padding: 12px 16px;
-  font-size: 16px;
-  font-weight: 600;
-  cursor: pointer;
-  display: block;
-  transition: all 0.2s ease;
-  box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
-  width: 100%;
-}
-button:hover {
-  filter: contrast(115%);
-}
-button:disabled {
-  opacity: 0.5;
-  cursor: default;
-}
-
-/* spinner/processing state, errors */
-.spinner,
-.spinner:before,
-.spinner:after {
-  border-radius: 50%;
-}
-.spinner {
-  color: #ffffff;
-  font-size: 22px;
-  text-indent: -99999px;
-  margin: 0px auto;
+.input-control {
   position: relative;
-  width: 20px;
-  height: 20px;
-  box-shadow: inset 0 0 0 2px;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
+  display: inline-block;
+  width: 260px;
 }
-.spinner:before,
-.spinner:after {
+
+.input-control--short {
+  width: 120px !important;
+}
+
+.form {
+  margin-top: 16px;
+}
+
+.form__title {
+  margin-top: 16px;
+}
+
+.form__submit {
+  margin-top: 12px;
+  margin-bottom: 12px;
+  background-color: #006EC5;
+  outline: none;
+  border: none;
+  color: #fff;
+  padding: 16px 72px;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 14px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.input-control {
+  margin-top: 8px;
+  margin-bottom: 8px;
+  margin-right: 24px;
+}
+
+.inp {
+  margin: auto;
+  width: 100%;
+  max-width: 280px;
+  border-radius: 8px 8px 0 0;
+  overflow: hidden;
+}
+
+.inp .label {
   position: absolute;
-  content: "";
-}
-.spinner:before {
-  width: 10.4px;
-  height: 20.4px;
-  background: #5469d4;
-  border-radius: 20.4px 0 0 20.4px;
-  top: -0.2px;
-  left: -0.2px;
-  -webkit-transform-origin: 10.4px 10.2px;
-  transform-origin: 10.4px 10.2px;
-  -webkit-animation: loading 2s infinite ease 1.5s;
-  animation: loading 2s infinite ease 1.5s;
-}
-.spinner:after {
-  width: 10.4px;
-  height: 10.2px;
-  background: #5469d4;
-  border-radius: 0 10.2px 10.2px 0;
-  top: -0.1px;
-  left: 10.2px;
-  -webkit-transform-origin: 0px 10.2px;
-  transform-origin: 0px 10.2px;
-  -webkit-animation: loading 2s infinite ease;
-  animation: loading 2s infinite ease;
+  top: 20px;
+  left: 12px;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.5);
+  font-weight: 400;
+  transform-origin: 0 0;
+  transform: translate3d(0, 0, 0);
+  transition: all .2s ease;
+  pointer-events: none;
 }
 
-@-webkit-keyframes loading {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes loading {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
+.inp .focus-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #F1F9FF;
+  z-index: -1;
+  transform: scaleX(0);
+  transform-origin: left;
 }
 
-@media only screen and (max-width: 600px) {
-  form {
-    width: 80vw;
-  }
+.inp input {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  border: 0;
+  font-family: inherit;
+  padding: 16px 12px 0 12px;
+  height: 56px;
+  font-size: 16px;
+  font-weight: 400;
+  background: #F1F9FF;
+  box-shadow: inset 0 -1px 0 #8CB9DC;
+  color: #000;
+  transition: all .15s ease;
 }
+
+.inp input:hover {
+  background: rgba(0, 0, 0, 0.04);
+  box-shadow: inset 0 -1px 0 #8CB9DC;
+}
+
+.inp input:not(:placeholder-shown) + .label {
+  color: rgba(0, 0, 0, 0.5);
+  transform: translate3d(0, -12px, 0) scale(0.75);
+}
+
+.inp input:focus {
+  background: rgba(0, 0, 0, 0.05);
+  outline: none;
+  box-shadow: inset 0 -2px 0 #006EC5;
+}
+
+.inp input:focus + .label {
+  color: #006EC5;
+  transform: translate3d(0, -12px, 0) scale(0.75);
+}
+
+.inp input:focus + .label + .focus-bg {
+  transform: scaleX(1);
+  transition: all .1s ease;
+}
+
+/*# sourceMappingURL=style.css.map */
