--- a/views/checkout.pug
+++ b/views/checkout.pug
@@ -27,7 +27,8 @@ html(lang='en')
 							input#email(type='text' placeholder=' ' value=email)
 							span.label Email
 							span.focus-bg
-					div#card-element
+					.form__title Card details
+					#card-element
 					.form__title Bill information
 					.input-control
 						label.inp(for='firstName')
