--- a/views/success.pug
+++ b/views/success.pug
@@ -1,73 +1,29 @@
-doctype html
-<!DOCTYPE html>
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
-        script(src='https://js.stripe.com/v3/')
-        script(src='https://polyfill.io/v3/polyfill.min.js?version=3.52.1&features=fetch')
-        script(src='/js/client.js')
-    body
-        div(style='height: 100%; width: 100%; display: flex; justify-content: center; align-items: center')
-            div(style='height: 493px; border: 1px solid lightgray; border-radius: 5px; display: flex')
-                div(style='width: 243px; height: 100%; position: relative; display: flex; align-items: center')
-                    div(style='width: 243px; height: 100px; position: relative; display: flex; align-items: center; flex-direction: column')
-                        span(style='z-index: 1; color: white; font-size: 20px') SME
-                        span(style='z-index: 1; font-size: 46px; color: white; margin-top: 15px') 250$
-                    svg(width='243' height='493' viewbox='0 0 243 493' fill='none' xmlns='http://www.w3.org/2000/svg' style='background: #003F71; position: absolute; top: 0; left: 0')
-                        mask#mask0(mask-type='alpha' maskunits='userSpaceOnUse' x='0' y='0' width='243' height='493')
-                            rect(width='243' height='493' rx='8' transform='matrix(1 0 0 -1 0 493)' fill='#003F71')
-                        g(mask='url(#mask0)')
-                            path(opacity='0.05' fill-rule='evenodd' clip-rule='evenodd' d='M164 -114L144.207 -85.8107C124.414 -57.6214 96 1.57614 87.5173 57.9547C76.2069 114.333 82 170.712 107.448 229.909C130.069 286.288 158.345 342.667 152.69 399.045C144.207 458.243 104.621 514.621 82 542.811L62.2069 571L5.75277e-07 571L1.80747e-06 542.811C3.03966e-06 514.621 5.50405e-06 458.243 8.09166e-06 399.045C1.0556e-05 342.667 1.30204e-05 286.288 1.54848e-05 229.909C1.80724e-05 170.712 2.05368e-05 114.333 2.30012e-05 57.9547C2.54656e-05 1.57613 2.80532e-05 -57.6214 2.92854e-05 -85.8107L3.05176e-05 -114L164 -114Z' fill='white')
-                            path(opacity='0.05' fill-rule='evenodd' clip-rule='evenodd' d='M41.8332 -115L50.3547 -90.3182C58.8762 -66.4876 76.7713 -17.9752 70.8063 30.5372C64.8413 79.0496 35.8682 127.562 32.4596 176.926C29.9031 225.438 53.7633 273.95 50.3547 322.463C47.7983 370.975 17.9731 419.488 3.48653 443.318L-11 468L-11 443.318C-11 419.488 -11 370.975 -11 322.463C-11 273.95 -11 225.438 -11 176.926C-11 127.562 -11 79.0496 -11 30.5372C-11 -17.9752 -11 -66.4876 -11 -90.3183L-11 -115L41.8332 -115Z' fill='white')
-                            path(opacity='0.05' fill-rule='evenodd' clip-rule='evenodd' d='M96.4433 -114L103.405 -85C110.368 -57 123.297 -2.39113e-06 117.33 57C110.368 114 82.5189 171 79.5351 229C75.5568 286 96.4432 343 117.33 400C137.222 457 158.108 514 168.054 542L178 571L-0.999999 571L-0.999998 542C-0.999997 514 -0.999994 457 -0.999992 400C-0.999989 343 -0.999987 286 -0.999984 229C-0.999982 171 -0.999979 114 -0.999977 57C-0.999974 -7.82434e-06 -0.999972 -57 -0.999971 -85L-0.999969 -114L96.4433 -114Z' fill='white')
-                div(style='width: 400px; height: 100%; display: flex; position: relative; flex-direction: column; align-items: center')
-                    svg(style='position: absolute; top: 80px;' width='91' height='90' viewbox='0 0 91 90' fill='none' xmlns='http://www.w3.org/2000/svg')
-                        ellipse(cx='44.8011' cy='45' rx='44.64' ry='45' fill='#DAEEFF')
-                        g(clip-path='url(#clip0)')
-                            path(d='M64.051 46.2995L61.7594 42.6557L63.1187 38.5664C63.3027 38.0082 63.0734 37.3954 62.568 37.1034L58.8599 34.9484L58.178 30.6902C58.0829 30.1093 57.5971 29.6759 57.0148 29.6515L52.7379 29.4827L50.1717 26.0306C49.8217 25.5591 49.1881 25.4025 48.6646 25.6565L44.8011 27.5088L40.936 25.6549C40.411 25.404 39.7804 25.5606 39.4289 26.0306L36.8628 29.4827L32.5858 29.6515C32.005 29.6744 31.5177 30.1078 31.4242 30.6887L30.7423 34.9469L27.0341 37.1018C26.5287 37.3938 26.2979 38.0067 26.482 38.5648L27.8412 42.6542L25.5512 46.2995C25.2389 46.7968 25.3188 47.4462 25.7397 47.8538L28.8279 50.8391L28.4809 55.1368C28.4341 55.7253 28.8022 56.2622 29.3619 56.4264L33.4729 57.6202L35.146 61.591C35.3753 62.1309 35.95 62.4441 36.5203 62.3194L40.7142 61.4526L44.0241 64.1854C44.2489 64.3694 44.525 64.4652 44.8011 64.4652C45.0772 64.4652 45.3517 64.3694 45.578 64.1854L48.8879 61.4526L53.0819 62.3194C53.6506 62.4411 54.2284 62.1324 54.4562 61.591L56.1293 57.6202L60.2402 56.4264C60.7999 56.2637 61.168 55.7253 61.1213 55.1368L60.7743 50.8391L63.8624 47.8538C64.2833 47.4462 64.3633 46.7968 64.051 46.2995ZM53.6672 40.3518L45.0817 53.3179C44.7573 53.8015 44.255 54.1255 43.7556 54.1255C43.2578 54.1255 42.7011 53.8441 42.3466 53.4852L36.0436 47.0295C35.6136 46.5885 35.6136 45.8737 36.0436 45.4327L37.599 43.8359C38.0289 43.4009 38.7274 43.4009 39.1543 43.8359L43.2563 48.0363L50.0209 37.8197C50.3603 37.3041 51.0498 37.1733 51.5506 37.5216L53.3745 38.7854C53.8769 39.1351 54.0066 39.8393 53.6672 40.3518Z' fill='white')
-                            circle(cx='42.9743' cy='43.6936' r='12.1935' fill='white')
-                            mask#mask0(mask-type='alpha' maskunits='userSpaceOnUse' x='25' y='25' width='40' height='40')
-                                path(d='M64.051 46.2998L61.7594 42.656L63.1187 38.5666C63.3027 38.0085 63.0734 37.3956 62.568 37.1036L58.8599 34.9487L58.178 30.6905C58.0829 30.1095 57.5971 29.6761 57.0148 29.6518L52.7379 29.483L50.1717 26.0308C49.8217 25.5594 49.1881 25.4027 48.6646 25.6567L44.8011 27.509L40.936 25.6552C40.411 25.4043 39.7804 25.5609 39.4289 26.0308L36.8628 29.483L32.5858 29.6518C32.005 29.6746 31.5177 30.108 31.4242 30.689L30.7423 34.9471L27.0341 37.1021C26.5287 37.3941 26.2979 38.007 26.482 38.5651L27.8412 42.6545L25.5512 46.2998C25.2389 46.7971 25.3188 47.4464 25.7397 47.854L28.8279 50.8393L28.4809 55.137C28.4341 55.7256 28.8022 56.2624 29.3619 56.4266L33.4729 57.6205L35.146 61.5912C35.3753 62.1311 35.95 62.4444 36.5203 62.3197L40.7142 61.4528L44.0241 64.1857C44.2489 64.3697 44.525 64.4655 44.8011 64.4655C45.0772 64.4655 45.3517 64.3697 45.578 64.1857L48.8879 61.4528L53.0819 62.3197C53.6506 62.4413 54.2284 62.1326 54.4562 61.5912L56.1293 57.6205L60.2402 56.4266C60.7999 56.2639 61.168 55.7256 61.1213 55.137L60.7743 50.8393L63.8624 47.854C64.2833 47.4464 64.3633 46.7971 64.051 46.2998ZM53.6672 40.352L45.0817 53.3182C44.7573 53.8018 44.255 54.1257 43.7556 54.1257C43.2578 54.1257 42.7011 53.8444 42.3466 53.4855L36.0436 47.0297C35.6136 46.5887 35.6136 45.874 36.0436 45.4329L37.599 43.8361C38.0289 43.4012 38.7274 43.4012 39.1543 43.8361L43.2563 48.0365L50.0209 37.8199C50.3603 37.3044 51.0498 37.1736 51.5506 37.5218L53.3745 38.7856C53.8769 39.1354 54.0066 39.8395 53.6672 40.352Z' fill='white')
-                            g(mask='url(#mask0)')
-                                g(style='mix-blend-mode:multiply')
-                                rect(width='46.401' height='58.1499' transform='matrix(0.820568 0.571549 -0.565368 0.824839 39.0352 9.24146)' fill='#7990A4')
-                        path(d='M78.6413 61.2464C77.6218 57.7417 72.8813 58.0731 72.8813 58.0731L73.0138 60.52C75.7547 60.0612 77.4496 63.1453 77.4496 63.1453L78.6413 61.2464Z' fill='#7990A4')
-                        path(d='M31.5874 72.5808C27.9544 72.9463 27.5215 77.3873 27.5215 77.3873L29.9497 77.6614C29.9497 75.0663 33.2815 74.0063 33.2815 74.0063L31.5874 72.5808Z' fill='#7990A4')
-                        path(d='M36.8426 13.506C37.2735 10.6537 33.9562 9.43555 33.9562 9.43555L33.2812 11.2331C35.263 11.753 35.4497 14.5162 35.4497 14.5162L36.8426 13.506Z' fill='#7990A4')
-                        path(d='M72.9547 23.2187C76.7185 23.4325 77.9214 18.845 77.9214 18.845L75.4963 18.1453C75.05 20.8861 71.4414 21.4498 71.4414 21.4498L72.9547 23.2187Z' fill='#7990A4')
-                        path(d='M17.4414 63.4115C16.5492 59.9074 12.4014 60.2515 12.4014 60.2515L12.5172 62.6852C14.9156 62.2392 16.3986 65.3228 16.3986 65.3228L17.4414 63.4115Z' fill='white')
-                        path(d='M49.5743 16.4859C53.7348 17.7237 56.3214 13.0277 56.3214 13.0277L53.785 11.613C52.5519 14.4915 48.4014 14.1575 48.4014 14.1575L49.5743 16.4859Z' fill='white')
-                        path(d='M62.0399 81.4432C62.525 77.7759 58.5754 76.2097 58.5754 76.2097L57.7612 78.5208C60.1518 79.1893 60.3596 82.742 60.3596 82.742L62.0399 81.4432Z' fill='white')
-                        path(d='M76.5396 42.0408C75.9452 42.2089 75.3256 42.2674 74.7105 42.2137C74.0954 42.2687 73.4756 42.2101 72.8813 42.0408C74.0886 41.795 75.3324 41.795 76.5396 42.0408Z' fill='white')
-                        path(d='M78.4711 37.0164C78.6524 37.6246 78.7145 38.2626 78.6541 38.8948C78.7139 39.5232 78.6517 40.1573 78.4711 40.7618C78.3044 40.1547 78.2463 39.5225 78.2997 38.8948C78.246 38.2634 78.304 37.6273 78.4711 37.0164Z' fill='white')
-                        path(d='M80.54 41.9141C81.1345 41.746 81.7541 41.6875 82.3692 41.7412C82.9843 41.6862 83.6041 41.7448 84.1983 41.9141C82.9911 42.1599 81.7473 42.1599 80.54 41.9141Z' fill='white')
-                        path(d='M78.5965 46.9849C78.4288 46.3779 78.3707 45.7456 78.425 45.1179C78.3707 44.4903 78.4288 43.8579 78.5965 43.251C78.7782 43.8552 78.8404 44.4895 78.7794 45.1179C78.8404 45.7463 78.7782 46.3807 78.5965 46.9849Z' fill='white')
-                        path(d='M81.559 44.7838C81.479 44.7838 81.136 44.5418 80.7702 44.1154C80.4044 43.689 80.1872 43.2741 80.2558 43.2049C80.3244 43.1358 80.6902 43.447 81.0446 43.8849C81.399 44.3228 81.6391 44.6801 81.559 44.7838Z' fill='white')
-                        path(d='M81.387 39.0907C81.4556 39.1599 81.2156 39.5286 80.8383 39.9089C80.461 40.2892 80.1066 40.5313 80.038 40.4621C79.9695 40.393 80.2095 40.0357 80.5868 39.6554C80.9641 39.2751 81.3184 39.0216 81.387 39.0907Z' fill='white')
-                        path(d='M77.1925 40.5427C77.1925 40.6234 76.7924 40.439 76.438 40.1393C76.0836 39.8397 75.8435 39.5401 75.9121 39.4594C75.9807 39.3787 76.3122 39.5631 76.6666 39.8628C77.021 40.1624 77.2611 40.462 77.1925 40.5427Z' fill='white')
-                        path(d='M77.0313 43.0436C77.0999 43.1127 76.8941 43.47 76.5511 43.8503C76.2082 44.2306 75.8767 44.4726 75.8081 44.4034C75.7395 44.3343 75.9452 43.977 76.2882 43.6083C76.6312 43.2395 76.9627 42.9859 77.0313 43.0436Z' fill='white')
-                        path(d='M12.2544 26.041C11.5794 26.2486 10.8704 26.32 10.168 26.2513C9.46554 26.32 8.75656 26.2486 8.08154 26.041C8.7596 25.8493 9.46639 25.7825 10.168 25.8438C10.8695 25.7825 11.5763 25.8493 12.2544 26.041Z' fill='#7990A4')
-                        path(d='M14.535 20.3225C14.7328 21.0136 14.7991 21.7361 14.7306 22.452C14.7995 23.1723 14.7332 23.8992 14.535 24.5947C14.3283 23.9009 14.2574 23.1732 14.3263 22.452C14.2581 21.7353 14.329 21.012 14.535 20.3225Z' fill='#7990A4')
-                        path(d='M16.8301 25.9095C17.5048 25.7006 18.2141 25.6291 18.9165 25.6992C19.6189 25.6305 20.3279 25.7019 21.0029 25.9095C20.3249 26.1012 19.6181 26.168 18.9165 26.1067C18.2149 26.1694 17.5079 26.1026 16.8301 25.9095Z' fill='#7990A4')
-                        path(d='M14.6146 31.575C14.4086 30.8855 14.3377 30.1622 14.4059 29.4454C14.337 28.7243 14.4079 27.9966 14.6146 27.3027C14.8213 27.9966 14.8921 28.7243 14.8232 29.4454C14.8914 30.1622 14.8206 30.8855 14.6146 31.575Z' fill='#7990A4')
-                        path(d='M17.9775 29.1696C17.8992 29.2485 17.495 28.9067 17.0907 28.4072C16.6865 27.9077 16.4127 27.4607 16.5039 27.3818C16.5952 27.303 16.9864 27.6579 17.4037 28.1443C17.821 28.6306 18.0687 29.1039 17.9775 29.1696Z' fill='#7990A4')
-                        path(d='M17.7948 22.6887C17.873 22.7676 17.5861 23.1751 17.1689 23.6089C16.7516 24.0427 16.3343 24.3319 16.243 24.253C16.1517 24.1741 16.4516 23.7535 16.8689 23.3197C17.2862 22.8859 17.7035 22.6099 17.7948 22.6887Z' fill='#7990A4')
-                        path(d='M13.0105 24.345C12.9322 24.4238 12.5541 24.2266 12.1498 23.8849C11.7456 23.5431 11.4717 23.2013 11.5369 23.1093C11.6021 23.0173 12.0064 23.2276 12.4106 23.5694C12.8149 23.9112 13.0757 24.2529 13.0105 24.345Z' fill='#7990A4')
-                        path(d='M12.814 27.1975C12.9053 27.2764 12.6575 27.6839 12.2663 28.1045C11.8751 28.5252 11.51 28.8144 11.4187 28.7487C11.3274 28.6829 11.5882 28.2623 11.9664 27.8285C12.3445 27.3947 12.7357 27.1186 12.814 27.1975Z' fill='#7990A4')
-                        path(d='M5.22619 45.7374C4.82361 49.2213 9.41301 50.0806 9.41301 50.0806L10.2412 47.758C7.49213 47.5026 7.08955 44.2742 7.08955 44.2742L5.22619 45.7374Z' fill='#7990A4')
-                        defs
-                            clippath#clip0
-                                rect(width='38.88' height='39.1936' fill='white' transform='translate(25.3613 25.4033)')
-                    div(style='display: flex; justify-content: center; flex-direction: column; align-items: center; position: absolute; top: 180px')
-                        div(style='width: 100%; text-align: center; margin-top: 38px')
-                            span(style='font-size: 20px; font-weight: bold;')
-                                | Payment is successful
-                        div(style='width: 100%; text-align: center; display: flex; justify-content: center; margin-top: 24px; flex-direction: column')
-                            div(style='width: 100%; text-align: center; display: flex; justify-content: center;')
-                                div(style='width: 260px;')
-                                    span(style='font-size: 14px')
-                                        | Your payment information has been sent to your email. Also, you can view all your transactions in the Order Invoice page
-                            div(style='margin-top: 52px')
-                                button(style='width: 125px; height: 48px; background: #006EC5; color: white; border-radius: 5px; border: none') OK
+html
+	head
+	body
+		div(style="height: 100%; width: 100%; display: flex; justify-content: center; align-items: center; background-image: url('/images/background-payment.jpg'); background-size: cover")
+			div(style='height: 493px; border: 1px solid lightgray; border-radius: 5px; display: flex')
+				div(style='width: 243px; height: 100%; position: relative; display: flex; align-items: center')
+					div(style='width: 243px; height: 100px; position: relative; display: flex; align-items: center; flex-direction: column')
+						span(style='z-index: 1; color: white; font-size: 20px') SME
+						span(style='z-index: 1; font-size: 46px; color: white; margin-top: 15px') 250$
+					svg(width='243' height='493' viewBox='0 0 243 493' fill='none' xmlns='http://www.w3.org/2000/svg' style='background: #003F71; position: absolute; top: 0; left: 0')
+						mask#mask0(mask-type='alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='243' height='493')
+							rect(width='243' height='493' rx='8' transform='matrix(1 0 0 -1 0 493)' fill='#003F71')
+						g(mask='url(#mask0)')
+							path(opacity='0.05' fill-rule='evenodd' clip-rule='evenodd' d='M164 -114L144.207 -85.8107C124.414 -57.6214 96 1.57614 87.5173 57.9547C76.2069 114.333 82 170.712 107.448 229.909C130.069 286.288 158.345 342.667 152.69 399.045C144.207 458.243 104.621 514.621 82 542.811L62.2069 571L5.75277e-07 571L1.80747e-06 542.811C3.03966e-06 514.621 5.50405e-06 458.243 8.09166e-06 399.045C1.0556e-05 342.667 1.30204e-05 286.288 1.54848e-05 229.909C1.80724e-05 170.712 2.05368e-05 114.333 2.30012e-05 57.9547C2.54656e-05 1.57613 2.80532e-05 -57.6214 2.92854e-05 -85.8107L3.05176e-05 -114L164 -114Z' fill='white')
+							path(opacity='0.05' fill-rule='evenodd' clip-rule='evenodd' d='M41.8332 -115L50.3547 -90.3182C58.8762 -66.4876 76.7713 -17.9752 70.8063 30.5372C64.8413 79.0496 35.8682 127.562 32.4596 176.926C29.9031 225.438 53.7633 273.95 50.3547 322.463C47.7983 370.975 17.9731 419.488 3.48653 443.318L-11 468L-11 443.318C-11 419.488 -11 370.975 -11 322.463C-11 273.95 -11 225.438 -11 176.926C-11 127.562 -11 79.0496 -11 30.5372C-11 -17.9752 -11 -66.4876 -11 -90.3183L-11 -115L41.8332 -115Z' fill='white')
+							path(opacity='0.05' fill-rule='evenodd' clip-rule='evenodd' d='M96.4433 -114L103.405 -85C110.368 -57 123.297 -2.39113e-06 117.33 57C110.368 114 82.5189 171 79.5351 229C75.5568 286 96.4432 343 117.33 400C137.222 457 158.108 514 168.054 542L178 571L-0.999999 571L-0.999998 542C-0.999997 514 -0.999994 457 -0.999992 400C-0.999989 343 -0.999987 286 -0.999984 229C-0.999982 171 -0.999979 114 -0.999977 57C-0.999974 -7.82434e-06 -0.999972 -57 -0.999971 -85L-0.999969 -114L96.4433 -114Z' fill='white')
+				div(style='width: 400px; height: 100%; display: flex; position: relative; flex-direction: column; align-items: center; background: white')
+					img(src='/images/check.svg', style='margin-top: 80px')
+					div(style='display: flex; justify-content: center; flex-direction: column; align-items: center; position: absolute; top: 180px')
+						div(style='width: 100%; text-align: center; margin-top: 38px')
+							span(style='font-size: 20px; font-weight: bold;') Payment is successful
+						div(style='width: 100%; text-align: center; display: flex; justify-content: center; margin-top: 24px; flex-direction: column')
+							div(style='width: 100%; text-align: center; display: flex; justify-content: center;')
+								div(style='width: 260px;')
+									span(style='font-size: 14px')
+										| Your payment information has been sent to your email. Also, you can view all your transactions in the Order Invoice page
+							div(style='margin-top: 52px')
+								a(href=redirect_url)
+									button(style='width: 125px; height: 48px; background: #006EC5; color: white; border-radius: 5px; border: none; cursor: pointer') OK
