--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 html {
-  overflow: hidden;
+  overflow-y: auto;
 }
 
 body {
@@ -18,19 +18,45 @@ body {
 .main {
   width: 920px;
   height: 620px;
-  margin-top: 150px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   background-color: #fff;
   display: flex;
   border-radius: 8px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.25);
 }
 
+.img {
+  position: relative;
+}
+
 .img img {
   width: 240px;
   height: 100%;
   border-radius: 8px 0 0 8px;
+}
+
+.img .plan {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #FFF;
+  font-weight: 700;
+}
+
+.img .plan__name {
+  text-align: center;
+  font-size: 20px;
+}
+
+.img .plan__price {
+  margin-top: 8px;
+  text-align: center;
+  font-size: 46px;
+}
+
+.plan {
+  position: absolute;
 }
 
 .content {
@@ -157,6 +183,50 @@ body {
   transition: all .1s ease;
 }
 
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-button {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  border: none;
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(150, 150, 150, 0.5);
+  border: none;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
+::-webkit-scrollbar-track:hover {
+  background: transparent;
+}
+
+::-webkit-scrollbar-track:active {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(150, 150, 150, 0.7);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: rgba(150, 150, 150, 0.9);
+}
+
+/*# sourceMappingURL=style.css.map */
+
 /*stripe*/
 .hidden {
   display: none;
@@ -264,5 +334,3 @@ button:disabled {
     width: 80vw;
   }
 }
-
-/*# sourceMappingURL=style.css.map */
