--- a/views/checkout.pug
+++ b/views/checkout.pug
@@ -24,45 +24,35 @@ html(lang='en')
 				form#payment-form
 					.input-control
 						label.inp(for='name')
-							input#name(type='text' placeholder=' ' value=name)
+							input#name(type='text' placeholder=' ' value=name required)
 							span.label Customer
 							span.focus-bg
 					.input-control
 						label.inp(for='email')
-							input#email(type='text' placeholder=' ' value=email)
+							input#email(type='text' placeholder=' ' value=email required)
 							span.label Email
 							span.focus-bg
 					.form__title Card details
 					#card-element
 					.form__title Bill information
 					.input-control
-						label.inp(for='firstName')
-							input#firstName(type='text' placeholder=' ')
-							span.label First name
-							span.focus-bg
-					.input-control
-						label.inp(for='lastName')
-							input#lastName(type='text' placeholder=' ')
-							span.label Last name
-							span.focus-bg
-					.input-control
 						label.inp(for='company')
-							input#company(type='text' placeholder=' ' value=address?address.line1:'')
+							input#company(type='text' placeholder=' ' value=address?address.line1:'' required)
 							span.label Company name
 							span.focus-bg
 					.input-control
 						label.inp(for='address')
-							input#address(type='text' placeholder=' ' value=address?address.line2:'')
+							input#address(type='text' placeholder=' ' value=address?address.line2:'' required)
 							span.label Billing address
 							span.focus-bg
 					.input-control
 						label.inp(for='zipCode')
-							input#zipCode(type='text' placeholder=' ' value=address?address.postal_code:'')
+							input#zipCode(type='number' placeholder=' ' value=address?address.postal_code:'' required)
 							span.label Zip code
 							span.focus-bg
 					.input-control
 						label.inp(for='country')
-							input#country(type='text' placeholder=' ' value=address?address.state:'')
+							input#country(type='text' placeholder=' ' value=address?address.state:'' required)
 							span.label Country
 							span.focus-bg
 					input#customerId(type='text' hidden value=customer_id)
@@ -73,4 +63,3 @@ html(lang='en')
 						.spinner.hidden#spinner
 						span#button-text #{mode}
 					p#card-error(role="alert")
-					
