--- a/views/checkout.pug
+++ b/views/checkout.pug
@@ -62,4 +62,4 @@ html(lang='en')
 					button.form__submit#submit
 						.spinner.hidden#spinner
 						span#button-text #{mode}
-					p#card-error(role="alert")
+					p#card-error(role="alert", style="color: red")
